# Omni2048

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  SPECS.md
C/: 2048.h  Makefile  Makefile.in  aclocal.m4  alocal.txt  config.h.in  configure  configure.ac  configure~  io_curses.h  main.c
C/autom4te.cache/: output.0  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.6
C/m4/: ax_with_curses.m4
C/src/: 2048.h  Makefile.am  Makefile.in  io_curses.h  io_stdio.h  main.c
C/src/.deps/: main.Po
C/tests/: test_combine_tiles.c  test_move_tile.c  test_move_tiles_down.c  test_move_tiles_left.c  test_move_tiles_right.c  test_move_tiles_up.c
